5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1734_2503.log
== SUBMITION (2019-05-09 18:22:31) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 

while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
print(round(soma, 8))
-- EXECUTION TIME:
0.136198
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2503/main.py", line 8, in <module>
    soma = soma + ((-1)** contador) * (4/divisor)
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:22:32) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 

while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + ((-1)** contador) * (4/divisor)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:23:00) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma + 0
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma + 0
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:23:08) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 0
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
print(round(soma, 8))
-- OUTPUT:
3.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:23:16) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 0
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
print(round(soma, 8))
-- OUTPUT:
3.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:23:20) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 0
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
print(round(soma, 8))
-- OUTPUT:
3.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:23:34) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 0
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
print(round(soma, 8))
-- OUTPUT:
3.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:25:55) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 0
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
	
print(round(soma, 8))
-- OUTPUT:
3.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:26:07) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 1
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
	
print(round(soma, 8))
-- OUTPUT:
4.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:26:19) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 1
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
	
print(round(soma, 8))
-- OUTPUT:
4.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:26:23) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 1
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
	
print(round(soma, 8))
-- OUTPUT:
4.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:26:39) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 1
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
	
print(round(soma, 8))
-- OUTPUT:
4.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:26:42) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 1
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
	
print(round(soma, 8))
-- OUTPUT:
4.14899996
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:27:02) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 1
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
	
print(round(soma, 8))
-- EXECUTION TIME:
0.170576
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
4.14899996
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
4.18918478
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
4.07025462
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:27:03) 
-- CODE:
n=int(input())
contador = 1
divisor = -1 
soma = 1
while( contador < n ):
	contador =  contador + 1
	divisor = divisor + 2
	soma = soma + ((-1)** contador) * (4/divisor)
	
print(round(soma, 8))
-- EXECUTION TIME:
0.12972
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
4.14899996
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
4.18918478
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
4.07025462
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
